--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 bin/*
 test.txt
-com/dawit/kebebe/Main.java
-com/dawit/kebebe/test.java
+src/com/dawit/kebebe/Main.java
+src/com/dawit/kebebe/test.java
